--- a/.github/workflows/gitgub_action.yml
+++ b/.github/workflows/gitgub_action.yml
@@ -15,6 +15,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build --if-present
-    - run: npm run test
+    - run: node app.js
       env:
         CI: true
