--- a/.github/workflows/gitgub_action.yml
+++ b/.github/workflows/gitgub_action.yml
@@ -16,5 +16,6 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: node app.js
+    - run: node multi.js
       env:
         CI: true
