--- a/.github/workflows/gitgub_action.yml
+++ b/.github/workflows/gitgub_action.yml
@@ -22,5 +22,6 @@ jobs:
     - run: npm run build --if-present
     - run: node app.js
     - run: node multi.js
+    - run: node calc.js
       env:
         CI: true
